--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <h1>🌟 卡通世界 🌟</h1>
+            <h1>🌟 霹靂星球爆炸了🌟</h1>
             <ul>
                 <li><a href="index.html" class="active">🏠 首頁</a></li>
                 <li><a href="about.html">✨ 關於我們</a></li>
